force-app/main/default/objects/ATI_Job_Split__c/ATI_Job_Split__c.object-meta.xml
<CustomObject>
    <label>Job Split</label>
    <nameField>
        <displayFormat>Job Split - {000000}</displayFormat>
        <label>ATI Job Split Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jobs Split</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>