force-app/main/default/objects/ATI_Job_Split__c/fields/ATI_Job__c.field-meta.xml
<CustomField>
    <fullName>ATI_Job__c</fullName>
    <label>ATI Job</label>
    <referenceTo>ATI_Job__c</referenceTo>
    <relationshipLabel>Jobs Split</relationshipLabel>
    <relationshipName>ATI_Jobs_Split</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>