force-app/main/default/objects/ATI_Job_Split__c/fields/Member_Role__c.field-meta.xml
<CustomField>
    <fullName>Member_Role__c</fullName>
    <label>Member Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Executive</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>