force-app/main/default/objects/ATI_Job_Split__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ATI_Jobs_Split</relationshipName>
    <type>Lookup</type>
</CustomField>