force-app/main/default/objects/ATI_Job_Split__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Job Split Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Overlay</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
                <default>true</default>
                <label>Revenue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>